# tilda

./: .cvsignore  .gitignore  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  HACKING  HACKING.md  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  TODO.md  aclocal.m4  autogen.sh  config.status  configure  configure.ac  configure.in  dbus_gen.sh  mkinstalldirs  tilda-config.h.in  tilda-dbus.desktop.in  tilda.appdata.xml  tilda.desktop  tilda.desktop.in  tilda.glade
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
cMake/: FindGTK3.cmake  FindVTE.cmake  Findconfuse.cmake  Findglib2.cmake  po.cmake
data/: Makefile.am  Readme.md
data/man/: Makefile.am  tilda.1.in
debian/: README.Debian  changelog  clean  control  copyright  rules  source.lintian-overrides  tilda.1  tilda.dirs  tilda.lintian-overrides  tilda.manpages  watch
debian/source/: options
docs/: SESSIONS.md  multi-monitor-setup.xcf  session_0.example
po/: LINGUAS  Makevars  POTFILES.in  README  bg.po  ca.po  cs.po  de.po  el.po  en_GB.po  es.po  fr.po  hr.po  hu.po  it.po  lt.mo  lt.po  nb.po  oc.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sl.po  sv.po  tilda-de.po  tilda-el.po  tilda-sv.po  tilda-zh_CN.po  tilda_it.po  tr.po  uk.po  zh_CN.po  zh_TW.po
src/: .cvsignore  CMakeLists.txt  Makefile.am  Makefile.in  a.out  callback_func.c  callback_func.h  config.h  configsys.c  configsys.h  debug.h  eggaccelerators.c  eggaccelerators.h  glade-resources.gresource.xml  key_bindings.c  key_converter.h  key_converter.l  key_grabber.c  key_grabber.h  load_tilda.c  load_tilda.h  menu.ui  readconf.c  readconf.h  screen-size.c  screen-size.h  strlcat.c  strlcat.h  strlcpy.c  strlcpy.h  tilda-cli-options.c  tilda-cli-options.h  tilda-config.h  tilda-context-menu.c  tilda-context-menu.h  tilda-dbus-actions.c  tilda-dbus-actions.h  tilda-dbus-actions.xml  tilda-enum-types.c  tilda-enum-types.c.template  (+40 more)
tilda_toggler/: io.koosha.Toggle.xml  opener.c
